<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/vCoverImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_mock_cover" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/vProfileImage"
            android:layout_width="@dimen/profile_circleImage_margin"
            android:layout_height="@dimen/profile_circleImage_margin"
            android:layout_marginStart="@dimen/spacing_large_extra"
            android:layout_marginTop="@dimen/profile_circleImage_marginTop"
            android:src="@drawable/ic_mock_avatar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/profile_profileName_marginStart"
                android:layout_marginTop="@dimen/profile_name_marginTop">
                <TextView
                    android:id="@+id/vProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/profile_nameText" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/vProfileLocationLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_location"
                        android:layout_gravity="bottom"/>
                    <TextView
                        android:id="@+id/vProfileLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_medium"
                        android:textSize="@dimen/font_medium"
                        android:text="@string/profile_LocationText"
                        android:layout_gravity="bottom"/>

                    <ImageView
                        android:id="@+id/vEditLogo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="@dimen/profile_editLogo_marginStart"
                        android:layout_marginEnd="@dimen/spacing_large_extra"
                        android:src="@drawable/ic_edit" />
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/vProfileEditLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_scrollView_layoutHeight"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large">
        <TextView
            android:id="@+id/vProfileDescription"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_scrollView_layoutHeight"
            android:layout_marginTop="@dimen/static_spacing_medium"
            android:text="@string/profile_textDescription" />
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>